<resources>
    <string name="app_name">RPNinja</string>
    <string name="all_clear">AC</string>
    <string name="divide">"÷"</string>
    <string name="clear">AC</string>
    <string name="space">␣</string>
    <string name="decimal">.</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="exponentiate">^</string>
    <string name="negate">¬</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete_content_description">backspace icon</string>
    <string name="enter_content_description">enter icon</string>
    <string name="unknown_operation_message">Unknown operation</string>
    <string name="divide_by_zero_error_message">You can\'t divide by zero.</string>
    <string name="insufficient_operands_message">Insufficient number of operands</string>
    <string name="invalid_number_message">Invalid number</string>
</resources>